--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,52 @@
 name: Build and Deploy
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [18.x]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: Install and Build
         run: |
           npm install
-          npm run-script build
+          npm run build
+
+      - name: Debug Output
+        run: ls -al && ls -al ./dist
+
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: artifactFromBuild
-          path: build
+          path: dist
+
       - name: S3 Cleanout
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          aws s3 rm \
-            s3://cjnehls.com  \
-            --recursive
+          aws s3 rm s3://cjnehls.com --recursive
+
       - name: S3 Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          aws s3 cp \
-            --recursive \
-            --acl public-read \
-            --region us-east-1 \
-            ./build s3://cjnehls.com
+          aws s3 cp ./dist s3://cjnehls.com --recursive --acl public-read --region us-east-1
